Initial Java Edition protocol lib